--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -31,6 +31,16 @@ body {
   line-height: 94.27px;
 }
 
+.hamburger-react {
+  color:  #123D6D
+}
+
+.headphoneImg {
+  width: 714px;
+  height: 714px;
+  flex: 2;
+}
+
 .cont-text {
   font-size: 28px;
   font-family: Poppins;
@@ -41,24 +51,21 @@ body {
 
 .btngroup {
   display: flex;
-  gap: 20px;    
-  
+  gap: 20px;
+  align-items: center;
 }
 
 .buy {
   width: 171px;
-height: 51px;
-top: 715px;
-left: 105px;
-gap: 0px;
-border-radius: 37px ;
-opacity: 0px;
-
+  height: 51px;
+  top: 715px;
+  left: 105px; 
+  border-radius: 37px;
   color: #fff;
   background: #0f4382;
   font-family: Poppins;
   font-size: 24px;
-  font-weight: 500; 
+  font-weight: 500;
   line-height: 36px;
 }
 
@@ -68,15 +75,14 @@ opacity: 0px;
   top: 715px;
   left: 286px;
   gap: 0px;
-  border-radius: 37px  ;
+  border-radius: 37px;
   border: 1px 0px 0px 0px;
   opacity: 0px;
   border: 1px solid #0f4382;
   font-family: Poppins;
-font-size: 24px;
-font-weight: 500;
-line-height: 36px;
-text-align: center;
-color: #0F4382;
-
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 36px;
+  text-align: center;
+  color: #0f4382;
 }
