--- a/src/assets/css/mediaquery.css
+++ b/src/assets/css/mediaquery.css
@@ -39,10 +39,18 @@
     text-align: center;
   }
 
+  .hamburger-react {
+    color:  #123D6D;
+    display: inline;
+  }
+
+  .mobileshow {
+    transition: 0.5s all ease-in-out;
+  }
+
   .btngroup {
     gap: 10px;
     margin: auto;
-
   }
   .buy {
     width: 139px;
